# LrnRTOS

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  linker.ld
.cargo/: config.toml
.github/workflows/: build_test.yaml
Documentation/: Contribute.md  coding_conventions.md
Documentation/arch/riscv/: csr.md
Documentation/hardware/: ns16550.md  uart.md
Documentation/kernel/: boot.md  context_switch.md  data_structure.md  devicetree.md  memory.md  platform.md  primitives.md  scheduler.md  subsystems.md  task.md  test_framework.md  timing_helpers.md  traps.md
arch/: riscv32imc-unknown-kernel.json
linkers/: linker.ld  linker_test_mode.ld
src/: boot.rs  config.rs  devices_info.rs  info.rs  kprint.rs  ktime.rs  log.rs  main.rs  misc.rs  primitive.rs  primitives.rs  print.rs  test.rs
src/arch/: mod.rs
src/arch/riscv32/: helpers.rs  interrupt.rs  mem.rs  misc.rs  mod.rs  start.S  start.rs  task_context.rs  trampoline.rs
src/devices/: cpufreq.rs  mod.rs
src/devices/cpu_intc/: mod.rs  riscv_cpu_intc.rs
src/devices/serials/: mod.rs  (+1 more)
src/drivers/: cpufreq.rs  mod.rs
src/dtb/: helpers.rs  mod.rs
src/fdt/: helpers.rs  mod.rs
src/kernel/: context.rs  mod.rs
src/ktime/: mod.rs  tick.rs  uptime.rs
src/logs/: mod.rs
src/mem/: kernel.rs  mod.rs
src/platform/: mem.rs  mod.rs  platform_info.rs  test.rs
src/primitives/: bitmap.rs  delta_list.rs  indexed_linked_list.rs  mod.rs  ring_buff.rs  sleep.rs  stack.rs
src/scheduler/: mod.rs
src/task/: list.rs  mod.rs  primitives.rs  sleep.rs
src/tests/: mod.rs  suites.rs
(+68 files in other folders)
