[package]
name = "lrnrtos"
version = "0.4.4"
edition = "2024"

[[bin]]
name = "lrnrtos"
test = false

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }

[features]
default = ["logs", "kprint"]
# Enable kernel logs
logs = []
# Enable early print using statically define uart device
kprint = []
# Switch to test mode
test = []
# Enable the idle task.
idle_task = []
